fixed alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -128,15 +128,19 @@ nav {
     color: #f5f5f5;
     padding: 5em;
     text-align: center;
-
     
-    .hrefgit {
-        color: aqua;
-        padding: 24.35em;
-    }
-    .hrefpgp {
-        color: aqua;
-        padding: 24em;
-    }
+}
 
+.contact-info {
+    text-decoration: none;
+    text-align: center;
+}
+
+
+.hrefgit {
+    color: aqua;
+}
+
+.hrefpgp {
+    color: aqua;
 }
